# GLD.SerializerBenchmark

./: .gitignore  404.html  Dockerfile  GLD.SerializerBenchmark.sln  README.md  build_check_v3.txt  build_errors.txt  compile-bond-schemas.sh  detailed_errors.txt  failure_logging_build.txt  final_build_check.txt  final_build_check_v4.txt  final_restored_build.txt  index.html  mkdocs.yml  package_list.txt  pyproject.toml  restored_build_check.txt  restored_build_check_v2.txt  run-benchmarks.sh  run-python-benchmarks.sh  sitemap.xml  verify-results.sh
analysis/: Analysis.xlsx  README.md  index.html  pyproject.toml
analysis/ANALYSIS_METHODOLOGY/: index.html
analysis/BENCHMARK_SUMMARY/: index.html
analysis/dashboard/: index.html
analysis/docs/: ANALYSIS_METHODOLOGY.md  BENCHMARK_SUMMARY.md  README.md
analysis/packages-overview/: index.html
analysis/reports/: BENCHMARK_SUMMARY.md
analysis/reports/dashboard/: index.html
analysis/src/benchmark_analysis/: __init__.py  cli.py  parser.py  regression.py  reports.py  stats.py
analysis/violin-plots/: index.html
python/: .gitignore  Dockerfile  README.md  benchmark.py  compile_protos.sh  index.html  pyproject.toml
python/docs/: index.md  serializers.md
python/scripts/: compile_protos.sh  run-benchmarks.sh  run-python-benchmarks.sh
python/serializers/: index.html
python/src/benchmark/: __init__.py  comparer.py  converters.py  report.py  runner.py
python/src/benchmark/data/: __init__.py  generator.py  models.py
python/src/benchmark/serializers/: __init__.py  base.py  binary_cbor2.py  binary_msgpack.py  json_msgspec.py  json_orjson.py  json_rapidjson.py  native_cloudpickle.py  (+3 more)
(+234 files in other folders)
