[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-analysis"
version = "0.1.0"
description = "Benchmark analysis and reporting tools"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
]

[project.scripts]
analyze-benchmarks = "benchmark_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_analysis"]

[tool.uv]
package = true
